レジュメ修正 (補足無しver)

--- a/resume/04_ログイン画面.md
+++ b/resume/04_ログイン画面.md
@@ -1,17 +1,19 @@
 ## ログイン画面
 
 ### ホーム画面追加とログインリダイレクト設定
-`rails g controller`コマンドで`timelines`コントローラの`index`アクションを作成し、ホーム画面として設定する。
+`rails g controller`コマンドで`timelines`コントローラおよび`index`アクションを作成する。
 ```
 $ rails g controller timelines index
 ```
+
+`index`アクションをアプリケーションのホーム画面として設定する。
 ```
 # config/routes.rb
 
 Rails.application.routes.draw do
   root to: 'timelines#index'
 
-  **省略**
+  **以下省略**
 end
 ```
 
@@ -39,19 +41,23 @@ end
 
 ```
 
+#### Deviseのauthenticatableについて補足
+todo
+
 ### ログイン画面の作成
-`bootstrap:install`コマンドでBootstrapを使用可能にする
+`bootstrap:install`コマンドでBootstrapを有効にする。
 ```
 $ rails g bootstrap:install static
 ```
 
-ログイン画面のデザインを変更する
+ログイン画面のデザインを変更する。
 ```
 # app/views/devise/sessions/new.html.erb
 
 <div class="wrapper">
   <h2>ログイン</h2>
 
+  <!-- エラーメッセージ表示部 -->
   <% if alert.present? %>
       <p class="alert"><%= alert %></p>
   <% end %>
@@ -182,7 +188,7 @@ module ElitesMessengerRepo
 
     # The default locale is :en and all translations from config/locales/*.rb,yml are auto loaded.
     # config.i18n.load_path += Dir[Rails.root.join('my', 'locales', '*.{rb,yml}').to_s]
-    # 下記を:jaに設定する
+    # default_localeを:jaに設定する
     config.i18n.default_locale = :ja
 
     # Do not swallow errors in after_commit/after_rollback callbacks.
@@ -191,7 +197,7 @@ module ElitesMessengerRepo
 end
 ```
 
-日本語化ファイル(ja.yml)とDevise用の日本語化ファイル(devise.ja.yml)を`config/locales`ディレクトリに設置する
+日本語化ファイル(ja.yml)とDevise用の日本語化ファイル(devise.ja.yml)を`config/locales`ディレクトリ下に設置する
 - ja.yml https://github.com/svenfuchs/rails-i18n/blob/master/rails/locale/ja.yml
 - devise.ja.yml https://gist.githubusercontent.com/kawamoto/4729292/raw/80fd53034289be926de2e2206c2ab7afbac35993/devise.ja.yml
 
