--- a/resume/06_ログアウト.md
+++ b/resume/06_ログアウト.md
@@ -13,6 +13,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+<!-- 以下を追記 -->
 <% if user_signed_in? %>
   <div class="logout_wrapper">
     <%= link_to "Log out", destroy_user_session_path, method: :delete %>
