--- a/resume/07_パスワードリマインダー画面.md
+++ b/resume/07_パスワードリマインダー画面.md
@@ -1,6 +1,7 @@
 ## パスワードリマインダー画面の作成
 
-パスワードリマインダー画面とパスワード再設定画面のデザインを変更する
+パスワードリマインダー画面のデザインを変更する。
+
 ```
 # app/views/devise/passwords/new.html.erb
 
@@ -26,6 +27,8 @@
   </div>
 </div>
 ```
+
+パスワード再設定画面のデザインを変更する。
 
 ```
 # app/views/devise/passwords/edit.html.erb
