--- a/resume/09_メッセージの投稿.md
+++ b/resume/09_メッセージの投稿.md
@@ -2,7 +2,7 @@
 
 ### タイムラインの入力フィールドを作成
 
-TimelineコントローラのindexアクションでTimelineモデルの空オブジェクトを作成。
+Timelineコントローラのindexアクションで`form_for`のための空オブジェクトを作成。
 
 ```
 # app/controllers/timelines_controller.rb
@@ -57,7 +57,7 @@ div.timeline_wrapper {
 }
 ```
 
-Timelineのルーティングを作成
+`resources`によりTimelineのCURDルーティングを作成する。
 ```
 # config/routes.rb
 
@@ -66,7 +66,7 @@ resources :timelines
 
 ### メッセージの投稿
 
-タイムラインの投稿内容一覧取得とメッセージ投稿処理を追加。
+タイムラインの取得処理と`create`メソッドでメッセージ投稿処理を追加する。
 
 ```
 # app/controllers/timelines_controller.rb
@@ -99,7 +99,7 @@ class TimelinesController < ApplicationController
 end
 ```
 
-Timelineにバリデーションを設定する。
+Timelineに以下のバリデーションを設定する。
 - message(投稿内容)は入力必須かつ空文字はNG
 
 ```
@@ -112,7 +112,7 @@ class Timeline < ActiveRecord::Base
 end
 ```
 
-タイムライン画面を編集。
+タイムライン画面を編集する。
 - 投稿内容一覧の表示部を追加。
 - 投稿内容は「サムネイル」+「メッセージ」で表示
 - バリデーションエラーメッセージを表示するフィールドを追加。
@@ -160,6 +160,8 @@ end
 
 </div>
 ```
+
+エラーメッセージを投稿ボタンの左に設置する。
 
 ```
 # app/assets/stylesheets/timeline.scss
@@ -282,7 +284,7 @@ div.timeline_wrapper {
 ```
 
 ### メッセージの改行
-simple_formatメソッドでテキストエリアの改行を<br/>に変換
+simple_formatメソッドでテキストエリアの`\n`改行を`<br/>`に変換
 
 ```
 # app/views/timelines/index.html.erb
@@ -325,3 +327,6 @@ simple_formatメソッドでテキストエリアの改行を<br/>に変換
 
 </div>
 ```
+
+#### simple_formatについて補足
+todo
