--- a/resume/10_メッセージの編集.md
+++ b/resume/10_メッセージの編集.md
@@ -1,6 +1,7 @@
 ## メッセージの編集
 
-メッセージ編集の内部処理を追加。
+`update`メソッドでメッセージ編集処理を作成する。
+
 ```
 # app/controllers/timelines_controller.rb
 
@@ -44,7 +45,7 @@ end
 
 ```
 
-投稿内容が自分の投稿か判定するヘルパーメソッドを作成。
+投稿内容が自分の投稿か判定する`mypost?`ヘルパーメソッドを作成する。
 ```
 # app/helpers/timelines_helper.rb
 
@@ -58,7 +59,7 @@ module TimelinesHelper
 end
 ```
 
-タイムライン画面を編集。
+タイムライン画面を編集する。
 - 自分の投稿の場合は編集ボタンを追加
 - 編集中はテキストエリア上部に「編集中」を表示
 - 編集中は編集をキャンセルするボタンを表示させる
