--- a/resume/11_投稿ユーザのフィルタリング.md
+++ b/resume/11_投稿ユーザのフィルタリング.md
@@ -1,6 +1,7 @@
 ## 投稿ユーザのフィルタリング
 
-Timelineモデルにuser_idでフィルタリングする`user_filter`スコープを追加
+Timelineモデルに`user_id`でフィルタリングする`user_filter`スコープを追加する。
+
 ```
 # app/models/timeline.rb
 
@@ -16,20 +17,9 @@ class Timeline < ActiveRecord::Base
 end
 ```
 
-ユーザをフィルタリングする`filter_by_user`アクションのルーティングを追加
-```
-# config/routes.rb
-
-resources :timelines do
-  collection do
-    post 'filter_by_user'
-  end
-end
-```
-
-Timelineコントローラの編集
+Timelineコントローラを編集する。
 - タイムライン取得時に`user_filter`スコープでフィルタリング
-- `filter_by_user`アクションの実装
+- ユーザをフィルタリングする`filter_by_user`アクションの実装
 
 ```
 # app/controllers/timelines_controller.rb
@@ -85,7 +75,19 @@ end
 
 ```
 
-タイムライン画面にユーザフィルタリングのドロップダウンと適用ボタンを追加
+`filter_by_user`アクションのルーティングを追加する。
+
+```
+# config/routes.rb
+
+resources :timelines do
+  collection do
+    post 'filter_by_user'
+  end
+end
+```
+
+タイムライン画面にユーザフィルタリングのドロップダウンと反映ボタンを追加する。
 
 ```
 # app/views/timelines/index.html.erb
