--- a/resume/12_メッセージの返信.md
+++ b/resume/12_メッセージの返信.md
@@ -1,13 +1,18 @@
 ## メッセージの返信
 
-Timelineモデルに`reply_id`を追加
+Timelineモデルに`reply_id`を追加する。
 ```
 $ rails g migration AddReplyIdToTimelines reply_id:integer
+```
+
+データベースに反映する。
+
+```
 $ rake db:migrate
 ```
 
-Timelineモデルを編集
-- 返信の投稿かを判定する`not_reply`スコープを作成。
+Timelineモデルを編集する。
+- 返信の投稿かを判定する`not_reply`スコープを作成
 - reply_idにアソシエーションを設定
 
 ```
@@ -31,7 +36,7 @@ class Timeline < ActiveRecord::Base
 end
 ```
 
-indexアクションに`reply_id`がパラメータとして渡された場合は、返信中の入力にする
+indexアクションに`reply_id`がパラメータとして渡された場合の処理を追加する。
 ```
 # app/controllers/timelines_controller.rb
 
@@ -92,7 +97,72 @@ end
 
 ```
 
-自分以外の投稿内容の場合は返信ボタンを表示させる
+タイムライン画面を編集する。
+- `@reply_timeline`を持っている場合は返信中として入力フィールドに返信元情報を表示する
+- 投稿内容を部分テンプレートに切り出す
+
+```
+# app/views/timelines/index.html.erb
+
+<div class="wrapper timeline_wrapper">
+
+  <!-- メッセージ入力 -->
+  <div class="input">
+    <%= form_for @input_message do |f| %>
+        <div class="form-group">
+          <%= f.label :message %>
+          <% if @input_message.persisted? %>
+              編集中
+          <% elsif @reply_timeline %>
+              <%= @reply_timeline.user.name %>の「<%= truncate(@reply_timeline.message, length: 7) %>」に返信
+          <% end %>
+          <br/>
+          <%= f.text_area :message, class: 'form-control', row: 3 %>
+        </div>
+        <div class="actions clearfix">
+          <div class="alert">
+            <p class="alert"><%= alert %></p>
+          </div>
+          <div class="post">
+            <% if @input_message.persisted? || @reply_timeline %>
+                <%= link_to root_path do %>
+                    <%= button_tag 'Cancel', class: 'btn btn-default' %>
+                <% end %>
+            <% end %>
+            <%= f.submit 'Post', class: 'btn btn-primary' %>
+          </div>
+        </div>
+
+        <%= f.hidden_field :reply_id, value: @reply_timeline.id if @reply_timeline %>
+    <% end %>
+  </div>
+
+  <div class="user_filter">
+    <%= form_tag filter_by_user_timelines_path do |f| %>
+        <div class="form-group">
+          <label>ユーザフィルター</label><br/>
+          <%= select_tag :filter_user_id, options_for_select(@users.map { |m| [m.name, m.id] }, params[:filter_user_id]), prompt: 'フィルターなし', class: 'form-control' %>
+        </div>
+        <div class="actions">
+          <%= submit_tag 'Apply', class: 'btn btn-primary' %>
+        </div>
+    <% end %>
+  </div>
+
+  <!-- タイムライン -->
+  <div class="timeline">
+    <% @timeline.each do |t| %>
+        <%= render 'timelines/timeline', t: t %>
+    <% end %>
+  </div>
+
+</div>
+```
+
+投稿内容の部分テンプレートを作成する。
+- タイムラインの自分以外の投稿内容の場合は返信ボタンを表示させる
+- 内部で自身のテンプレートを呼び出し、返信された投稿を再帰的に表示する
+
 ```
 # app/views/timelines/_timeline.html.erb
 
@@ -125,36 +195,6 @@ end
 ```
 
 返信の投稿は返信元の直下に表示するため`margin-top: -20px`を適用する。
-```
-# app/views/timelines/index.html.erb
-
-<%
-  is_reply = false if is_reply.nil?
-%>
-
-<div class="per <%= 'mine' if mypost?(t) %> <%= 'reply' if is_reply %>">
-  <p class="icon">
-    <% if t.user.thumbnail? %>
-        <%= image_tag t.user.thumbnail.url %>
-    <% else %>
-        NO IMAGE
-    <% end %>
-  </p>
-  <%= simple_format t.message, class: 'message' %>
-  <% if mypost?(t) %>
-      <%= link_to root_path(id: t.id, message: t.message) do %>
-          <%= button_tag 'Edit', class: 'btn btn-info' %>
-      <% end %>
-  <% else %>
-      <%= link_to root_path(reply_id: t.id) do %>
-          <%= button_tag 'Re', class: 'btn btn-info' %>
-      <% end %>
-  <% end %>
-</div>
-<% t.replies.each do |r| %>
-    <%= render 'timelines/timeline', t: r, is_reply: true %>
-<% end %>
-```
 
 ```
 # app/assets/stylesheets.timelines.scss
