--- a/resume/13_メッセージの削除.md
+++ b/resume/13_メッセージの削除.md
@@ -1,6 +1,7 @@
 ## メッセージの削除
 
-Timelineコントローラにメッセージ削除処理を追加
+Timelineコントローラに`destroy`アクションでメッセージ削除処理を追加する。
+
 ```
 # app/controllers/timelines_controller.rb
 
@@ -67,7 +68,9 @@ end
 
 ```
 
-reply_idのアソシエーションに`dependent: :destory`を設定し、関連する投稿も削除するようにする。
+Timelineモデルのアソシエーションを編集する。
+- reply_idのアソシエーションに`dependent: :destory`を設定し、投稿削除時に関連する返信も削除するようにする
+
 ```
 # app/models/timeline.rb
 
