--- a/resume/05_ユーザ新規作成画面.md
+++ b/resume/05_ユーザ新規作成画面.md
@@ -10,6 +10,7 @@
   <h2>新規登録</h2>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <!-- エラーメッセージ表示部 -->
       <%= devise_error_messages! %>
 
       <div class="form-group">
