補足を記入

--- a/resume/01_プロジェクトを作成.md
+++ b/resume/01_プロジェクトを作成.md
@@ -15,5 +15,23 @@ $ rails new elites-messenger_repo
 .DS_Store
 ```
 
-### gitignore補足
-Todo
+### 補足: gitignore
+
+特定のファイルやディレクトリをGit管理しない場合は`.gitignore`を作成する
+
+```
+# .gitignore
+# 記入例
+
+# 「test.txt」ファイルを対象から除外
+test.txt
+
+# 拡張子が「o」や「a」のファイルを除外
+*.[oa]
+
+# exclusion.oは除外しない
+!exclusion.o
+
+# 「test」ディレクトリを除外
+/test
+```
