--- a/resume/04_ログイン画面.md
+++ b/resume/04_ログイン画面.md
@@ -41,8 +41,9 @@ end
 
 ```
 
-#### Deviseのauthenticatableについて補足
-todo
+#### 補足: Deviseのauthenticatable
+- 認証に使用するメソッド名は「authenticate_」+「Deviseに使用するクラス名」になる。
+「User」であれば`authenticate_user`、「Admin」であれば`authenticate_admin`。
 
 ### ログイン画面の作成
 `bootstrap:install`コマンドでBootstrapを有効にする。
@@ -124,8 +125,8 @@ div.wrapper {
 }
 ```
 
-#### SCSSの記述についての補足
-todo
+#### 補足: SCSS
+- SCSSはCSSと異なり、子要素に対するセレクタを入れ子で表現できる。
 
 
 ログイン成功メッセージを共通レイアウトに表示させる。
@@ -201,5 +202,24 @@ end
 - ja.yml https://github.com/svenfuchs/rails-i18n/blob/master/rails/locale/ja.yml
 - devise.ja.yml https://gist.githubusercontent.com/kawamoto/4729292/raw/80fd53034289be926de2e2206c2ab7afbac35993/devise.ja.yml
 
-#### I18nによる多言語化対応について補足
-todo
+#### 補足: I18n
+- `config/locales`に配置したja.ymlファイルは`I18n.t`で参照する。
+- `I18n.t`には`%{}`で囲ってパラメータを渡すことが可能。
+
+```
+# config/locales/ja.yml
+
+ja:
+  test: 'テスト'
+  show_param: '%{param}です。'
+
+```
+
+```
+# ビューで参照する場合
+
+<%= I18n.t('test') %>
+  => 「テスト」
+<%= I18n.t('show_param', param: 'テスト') %>
+  => 「テストです。」
+```
