--- a/resume/05_ユーザ新規作成画面.md
+++ b/resume/05_ユーザ新規作成画面.md
@@ -105,4 +105,12 @@ end
 ```
 
 #### バリデーションについての補足
-todo
+使用頻度の高いバリデーション一覧
+
+ パラメータ | 概要
+-- | --
+ presence | 空でないこと
+ uniqueness | ユニーク(同じ値が無い)であること
+ length | 長さ
+ numericality | 数値であること
+ 
