--- a/resume/06_ログアウト.md
+++ b/resume/06_ログアウト.md
@@ -38,5 +38,12 @@ div.logout_wrapper {
 }
 ```
 
-#### Deviseのメソッドについての補足
-todo
+#### 補足 Deviseのヘルパーメソッド
+Deviseが自動作成するメソッド一覧(使用頻度の高いもの抜粋)
+
+前提：「User」モデルに対してDeviseを設定した場合
+
+メソッド名 | 概要 | 備考
+-- | --
+user_signed_in? | ログイン済みか | 「モデル名」 +「_signed_in?」 + 「モデル名」で生成される
+current_user | ログイン中のユーザ | 「current_」 + 「モデル名」で生成される
