--- a/resume/11_投稿ユーザのフィルタリング.md
+++ b/resume/11_投稿ユーザのフィルタリング.md
@@ -217,5 +217,28 @@ div.timeline_wrapper {
 }
 ```
 
-#### ドロップダウンの補足
-todo
+#### 補足: selectまたはselect_tagの設定方法
+配列で設定
+```
+<%= select_tag オブジェクト名, プロパティ名, [["Railsの基礎", "rails_base"], ["Rubyの基礎", "ruby_base"]] %>
+または
+<%= select_tag オブジェクト名[プロパティ名], options_for_select([["Railsの基礎", "rails_base"], ["Rubyの基礎", "ruby_base"]]) %>
+```
+
+ハッシュで設定
+```
+<%= select_tag オブジェクト名, プロパティ名, {"Railsの基礎" => "rails_base", "Rubyの基礎" => "ruby_base"} %>
+または
+<%= select_tag オブジェクト名[プロパティ名], options_for_select({"Railsの基礎" => "rails_base", "Rubyの基礎" => "ruby_base"}) %>
+```
+
+DBから取得した情報で設定
+```
+# @categories = Category.all
+<%= select_tag 'オブジェクト名[プロパティ名]', options_from_collection_for_select(@categories, :id, :name) %>
+```
+
+optgroup付きのselectを配列で設定
+```
+<%= select_tag 'page[name]', grouped_options_for_select([["基礎", [["Railsの基礎", "rails_base"], ["Rubyの基礎", "ruby_base"]]]]) %>
+```
