--- a/resume/12_メッセージの返信.md
+++ b/resume/12_メッセージの返信.md
@@ -260,5 +260,17 @@ div.timeline_wrapper {
 }
 ```
 
-#### 自己結合のアソシエーションについての補足
-todo
+#### 補足: 自己結合のアソシエーション
+
+`reply_id`のように、自身のテーブルに対して自己結合のアソシエーションを設定したい場合は、アソシエーションにモデルのクラス名と外部キーを設定する。
+
+```
+has_many :replies, class_name: 'Timeline', foreign_key: 'reply_id'
+belongs_to :parent, class_name: 'Timeline', foreign_key: 'reply_id'
+```
+```
+# 子要素を参照できる
+timeline.replies
+# 親要素を参照できる
+timeline.parent
+```
