--- a/resume/13_メッセージの削除.md
+++ b/resume/13_メッセージの削除.md
@@ -92,6 +92,18 @@ class Timeline < ActiveRecord::Base
 end
 ```
 
+#### 補足: アソシエーションのdependentオプション
+
+dependentオプションはモデルを削除する場合のアソシエーションに対する動作を設定する。
+
+オプション名 | 概要
+-- | --
+:destroy | 子要素も削除する(子要素のdestroyを呼ぶ)
+:delete_all | 子要素も削除する(直接DBの削除実行)
+:nullify | 子要素をNULL更新する
+:restrict_with_exception | 子要素がある場合は例外を発生する
+:restrict_with_error | 子要素がある場合はエラー情報が返ってくる
+
 自分の投稿内容の場合は削除ボタンを表示する
 ```
 # app/views/timelines/_timeline.html.erb
