動作確認について追記

--- a/resume/05_ユーザ新規作成画面.md
+++ b/resume/05_ユーザ新規作成画面.md
@@ -2,7 +2,7 @@
 
 ### ユーザ新規作成画面の作成
 
-ユーザ新規作成画面のデザインを変更する
+ユーザ新規作成画面のデザインを変更する。
 ```
 # app/views/devise/registrations/new.html.erb
 
@@ -104,13 +104,18 @@ class User < ActiveRecord::Base
 end
 ```
 
-#### バリデーションについての補足
+### 動作確認
+- `localhost:3000/users/sign_up`にアクセスしてユーザ新規作成画面が表示されること。
+- 不正なバリデーションの入力でエラーメッセージが表示されること。
+- バリデーションエラーが無い場合、ユーザが作成できること。
+- ログイン画面で作成したユーザ情報でログインできること。
+
+#### 補足: バリデーションの種類
 使用頻度の高いバリデーション一覧
 
- パラメータ | 概要
+ パラメータ | チェック概要
 -- | --
  presence | 空でないこと
  uniqueness | ユニーク(同じ値が無い)であること
- length | 長さ
+ length | 文字列の長さ
  numericality | 数値であること
- 
