--- a/resume/06_ログアウト.md
+++ b/resume/06_ログアウト.md
@@ -38,6 +38,9 @@ div.logout_wrapper {
 }
 ```
 
+### 動作確認
+- ログイン後のタイムライン画面でログアウトのリンクからログアウトできること。
+
 #### 補足 Deviseのヘルパーメソッド
 Deviseが自動作成するメソッド一覧(使用頻度の高いもの抜粋)
 
@@ -45,5 +48,5 @@ Deviseが自動作成するメソッド一覧(使用頻度の高いもの抜粋)
 
 メソッド名 | 概要 | 備考
 -- | --
-user_signed_in? | ログイン済みか | 「モデル名」 +「_signed_in?」 + 「モデル名」で生成される
-current_user | ログイン中のユーザ | 「current_」 + 「モデル名」で生成される
+user_signed_in? | ログイン済みかチェック | 「モデル名」 +「_signed_in?」 + 「モデル名」で生成される
+current_user | ログイン中のユーザインスタンス | 「current_」 + 「モデル名」で生成される
