--- a/resume/07_パスワードリマインダー画面.md
+++ b/resume/07_パスワードリマインダー画面.md
@@ -64,3 +64,8 @@
   </div>
 </div>
 ```
+
+### 動作確認
+- `localhost:3000/users/password/new`からリマインダー画面を表示できること。
+- リマインダー画面のメールアドレス送信でメールが受信できること。
+- メールのリンクからパスワード再設定画面が表示でき、パスワードの再設定ができること。
