--- a/resume/12_メッセージの返信.md
+++ b/resume/12_メッセージの返信.md
@@ -2,13 +2,13 @@
 
 Timelineモデルに`reply_id`を追加する。
 ```
-$ rails g migration AddReplyIdToTimelines reply_id:integer
+$ bundle exec rails g migration AddReplyIdToTimelines reply_id:integer
 ```
 
 データベースに反映する。
 
 ```
-$ rake db:migrate
+$ bundle exec rake db:migrate
 ```
 
 Timelineモデルを編集する。
@@ -259,6 +259,9 @@ div.timeline_wrapper {
   }
 }
 ```
+
+### 動作確認
+- 返信ボタンを押下してメッセージを入力し、返信できること。
 
 #### 補足: 自己結合のアソシエーション
 
