--- a/resume/04_ログイン画面.md
+++ b/resume/04_ログイン画面.md
@@ -3,7 +3,7 @@
 ### ホーム画面追加とログインリダイレクト設定
 `rails g controller`コマンドで`timelines`コントローラおよび`index`アクションを作成する。
 ```
-$ rails g controller timelines index
+$ bundle exec rails g controller timelines index
 ```
 
 `index`アクションをアプリケーションのホーム画面として設定する。
@@ -41,14 +41,10 @@ end
 
 ```
 
-#### 補足: Deviseのauthenticatable
-- 認証に使用するメソッド名は「authenticate_」+「Deviseに使用するクラス名」になる。
-「User」であれば`authenticate_user`、「Admin」であれば`authenticate_admin`。
-
 ### ログイン画面の作成
 `bootstrap:install`コマンドでBootstrapを有効にする。
 ```
-$ rails g bootstrap:install static
+$ bundle exec rails g bootstrap:install static
 ```
 
 ログイン画面のデザインを変更する。
@@ -125,10 +121,6 @@ div.wrapper {
 }
 ```
 
-#### 補足: SCSS
-- SCSSはCSSと異なり、子要素に対するセレクタを入れ子で表現できる。
-
-
 ログイン成功メッセージを共通レイアウトに表示させる。
 ```
 # app/views/layouts/application.html.erb
@@ -161,9 +153,6 @@ I18nライブラリをインストールする。
 # 下記を追記
 gem 'i18n'
 ```
-
-#### I18nについて補足
-Todo
 
 システムのデフォルト言語を日本語にする
 ```
@@ -201,6 +190,18 @@ end
 日本語化ファイル(ja.yml)とDevise用の日本語化ファイル(devise.ja.yml)を`config/locales`ディレクトリ下に設置する
 - ja.yml https://github.com/svenfuchs/rails-i18n/blob/master/rails/locale/ja.yml
 - devise.ja.yml https://gist.githubusercontent.com/kawamoto/4729292/raw/80fd53034289be926de2e2206c2ab7afbac35993/devise.ja.yml
+
+
+### 動作確認
+- `localhost:3000`にアクセスし、ログイン画面にリダイレクトすること
+- メールアドレスとパスワードを入力し、ログイン画面エラーメッセージが表示されること
+
+#### 補足: SCSS
+- SCSSはCSSと異なり、子要素に対するセレクタを入れ子で表現できる。
+
+#### 補足: Deviseのauthenticatable
+- 認証に使用するメソッド名は「authenticate_」+「Deviseに使用するクラス名」になる。
+「User」であれば`authenticate_user`、「Admin」であれば`authenticate_admin`。
 
 #### 補足: I18n
 - `config/locales`に配置したja.ymlファイルは`I18n.t`で参照する。
