--- a/resume/11_投稿ユーザのフィルタリング.md
+++ b/resume/11_投稿ユーザのフィルタリング.md
@@ -217,6 +217,9 @@ div.timeline_wrapper {
 }
 ```
 
+### 動作確認
+- ドロップダウンでユーザを選択して投稿一覧がフィルタリングされること。
+
 #### 補足: selectまたはselect_tagの設定方法
 配列で設定
 ```
