補足のヘッダーの大きさ修正

--- a/resume/04_ログイン画面.md
+++ b/resume/04_ログイン画面.md
@@ -196,14 +196,14 @@ end
 - `localhost:3000`にアクセスし、ログイン画面にリダイレクトすること
 - メールアドレスとパスワードを入力し、ログイン画面エラーメッセージが表示されること
 
-#### 補足: SCSS
+### 補足: SCSS
 - SCSSはCSSと異なり、子要素に対するセレクタを入れ子で表現できる。
 
-#### 補足: Deviseのauthenticatable
+### 補足: Deviseのauthenticatable
 - 認証に使用するメソッド名は「authenticate_」+「Deviseに使用するクラス名」になる。
 「User」であれば`authenticate_user`、「Admin」であれば`authenticate_admin`。
 
-#### 補足: I18n
+### 補足: I18n
 - `config/locales`に配置したja.ymlファイルは`I18n.t`で参照する。
 - `I18n.t`には`%{}`で囲ってパラメータを渡すことが可能。
 
