--- a/resume/05_ユーザ新規作成画面.md
+++ b/resume/05_ユーザ新規作成画面.md
@@ -110,7 +110,7 @@ end
 - バリデーションエラーが無い場合、ユーザが作成できること。
 - ログイン画面で作成したユーザ情報でログインできること。
 
-#### 補足: バリデーションの種類
+### 補足: バリデーションの種類
 使用頻度の高いバリデーション一覧
 
  パラメータ | チェック概要
