--- a/resume/06_ログアウト.md
+++ b/resume/06_ログアウト.md
@@ -41,7 +41,7 @@ div.logout_wrapper {
 ### 動作確認
 - ログイン後のタイムライン画面でログアウトのリンクからログアウトできること。
 
-#### 補足 Deviseのヘルパーメソッド
+### 補足: Deviseのヘルパーメソッド
 Deviseが自動作成するメソッド一覧(使用頻度の高いもの抜粋)
 
 前提：「User」モデルに対してDeviseを設定した場合
