--- a/resume/11_投稿ユーザのフィルタリング.md
+++ b/resume/11_投稿ユーザのフィルタリング.md
@@ -220,7 +220,7 @@ div.timeline_wrapper {
 ### 動作確認
 - ドロップダウンでユーザを選択して投稿一覧がフィルタリングされること。
 
-#### 補足: selectまたはselect_tagの設定方法
+### 補足: selectまたはselect_tagの設定方法
 配列で設定
 ```
 <%= select_tag オブジェクト名, プロパティ名, [["Railsの基礎", "rails_base"], ["Rubyの基礎", "ruby_base"]] %>
