--- a/resume/12_メッセージの返信.md
+++ b/resume/12_メッセージの返信.md
@@ -263,7 +263,7 @@ div.timeline_wrapper {
 ### 動作確認
 - 返信ボタンを押下してメッセージを入力し、返信できること。
 
-#### 補足: 自己結合のアソシエーション
+### 補足: 自己結合のアソシエーション
 
 `reply_id`のように、自身のテーブルに対して自己結合のアソシエーションを設定したい場合は、アソシエーションにモデルのクラス名と外部キーを設定する。
 
