--- a/resume/13_メッセージの削除.md
+++ b/resume/13_メッセージの削除.md
@@ -206,7 +206,7 @@ div.timeline_wrapper {
 ### 動作確認
 - 削除ボタンで自分の投稿及び返信が削除されること。
 
-#### 補足: アソシエーションのdependentオプション
+### 補足: アソシエーションのdependentオプション
 
 dependentオプションはモデルを削除する場合のアソシエーションに対する動作を設定する。
 
