レジュメ追記

--- a/resume/04_ログイン画面.md
+++ b/resume/04_ログイン画面.md
@@ -91,7 +91,7 @@ $ bundle exec rails g bootstrap:install static
 
 ```
 ```
-# app/assets/stylesheets/common.scss
+# app/assets/stylesheets/common.scss (新規作成)
 
 body {
   background-color: #f0f0f0;
@@ -104,7 +104,7 @@ body {
 }
 ```
 ```
-# app/assets/stylesheets/user.scss
+# app/assets/stylesheets/user.scss (新規作成)
 
 div.wrapper {
   width: 600px;
@@ -196,8 +196,13 @@ end
 - `localhost:3000`にアクセスし、ログイン画面にリダイレクトすること
 - メールアドレスとパスワードを入力し、ログイン画面エラーメッセージが表示されること
 
+### 補足: サーバの起動
+- サーバの起動は`bundle exec rails s`
+- ソースファイルを変更したら必ずサーバを再起動すること
+
 ### 補足: SCSS
-- SCSSはCSSと異なり、子要素に対するセレクタを入れ子で表現できる。
+- SCSSはCSSを記入しやすく&読みやすくしたCSSのメタ言語
+- CSSと比べて、子要素に対するセレクタを入れ子で表現できる、変数を使用できるなどのメリットがある
 
 ### 補足: Deviseのauthenticatable
 - 認証に使用するメソッド名は「authenticate_」+「Deviseに使用するクラス名」になる。
