--- a/resume/05_ユーザ新規作成画面.md
+++ b/resume/05_ユーザ新規作成画面.md
@@ -105,7 +105,7 @@ end
 ```
 
 ### 動作確認
-- `localhost:3000/users/sign_up`にアクセスしてユーザ新規作成画面が表示されること。
+- `localhost:3000/users/sign_up`にアクセスし、ユーザ新規作成画面が表示されること。
 - 不正なバリデーションの入力でエラーメッセージが表示されること。
 - バリデーションエラーが無い場合、ユーザが作成できること。
 - ログイン画面で作成したユーザ情報でログインできること。
