レジュメ修正

--- a/resume/01_プロジェクトを作成.md
+++ b/resume/01_プロジェクトを作成.md
@@ -2,7 +2,8 @@
 
 `rails new`コマンドでプロジェクトを作成する。
 ```
-$ rails new elites-messenger_repo
+$ rails new elites-messenger-repo
+$ cd elites-messenger-repo
 ```
 
 プロジェクトをGit管理する場合は以下のディレクトリおよびファイルを管理外にする。
