ファイル名を変更
レジュメの見直し完了

--- a/resume/04_実習_ログイン画面.md
+++ b/resume/04_実習_ログイン画面.md
@@ -2,23 +2,39 @@
 
 ### ホーム画面追加とログインリダイレクト設定
 `rails g controller`コマンドで`timelines`コントローラおよび`index`アクションを作成する。
-```
+```bash
 $ bundle exec rails g controller timelines index
 ```
 
 `index`アクションをアプリケーションのホーム画面として設定する。
-```
+```ruby
 # config/routes.rb
 
 Rails.application.routes.draw do
-  root to: 'timelines#index'
 
-  **以下省略**
+#--********************* 下記を削除 *********************
+  get 'timelines/index'
+#--******************************************************
+
+#--********************* 下記を追加 *********************
+  root to: 'timelines#index'
+  # 下記でも可
+  # root 'timelines#index'
+#--******************************************************
+
+  devise_for :users
+  # The priority is based upon order of creation: first created -> highest priority.
+  # See how all your routes lay out with "rake routes".
+
+#--************************ 省略 ************************
+
 end
 ```
 
-未ログインの状態でホーム画面にアクセスした場合に、ログイン画面にリダイレクトするように設定する。
-```
+<br>
+未ログインの状態でホーム画面にアクセスした場合に、ログイン画面にリダイレクトするように設定する。<br>
+
+```ruby
 # app/controllers/application_controller.rb
 
 class ApplicationController < ActionController::Base
@@ -26,8 +42,9 @@ class ApplicationController < ActionController::Base
   # For APIs, you may want to use :null_session instead.
   protect_from_forgery with: :exception
 
-  # 下記を追記
+  #--********************* 下記を追加 *********************
   before_action :authenticate_user!
+  #--******************************************************
 
   # deviseのコントローラを実行する時は「configure_permitted_parameters」メソッドを実行する
   before_action :configure_permitted_parameters, if: :devise_controller?
@@ -37,18 +54,24 @@ class ApplicationController < ActionController::Base
     # 新規作成する場合にname、thumbnail、agreementパラメータを含める
     devise_parameter_sanitizer.permit(:sign_up, keys: [:name, :thumbnail, :agreement])
   end
+
 end
-
 ```
 
+<br>
 ### ログイン画面の作成
-`bootstrap:install`コマンドでBootstrapを有効にする。
-```
+`bootstrap:install`コマンドでBootstrapを有効にする。<br>
+顧客管理システムでは、BootstrapのサイトからCDNをコピーして、application.html.erbに貼り付けましたが、今回はGemを使用する。
+```bash
 $ bundle exec rails g bootstrap:install static
 ```
 
-ログイン画面のデザインを変更する。
-```
+ログイン画面のデザインを変更する。<br>
+主にBootstrapのclassを適用している。<br>
+`<% if devise_mapping.rememberable? -%>`で使用している`<% -%>`(閉じタグに`-`が付いている)は、閉じタグの後で改行を行った場合でも出力される時は改行が取り除かれる。<br>
+`present?`メソッドは、nil, "", " "(半角スペースのみ), [](空の配列), {}(空のハッシュ) のときに`false`を返す。(何か値が入っている時は`true`となる)
+
+```html
 # app/views/devise/sessions/new.html.erb
 
 <div class="wrapper">
@@ -88,9 +111,11 @@ $ bundle exec rails g bootstrap:install static
   </div>
 
 </div>
+```
 
-```
-```
+scssファイルを作成しデザインを適用。<br>
+scssファイル作成前後でデザインを確認<br>
+```css
 # app/assets/stylesheets/common.scss (新規作成)
 
 body {
@@ -103,7 +128,7 @@ body {
   }
 }
 ```
-```
+```css
 # app/assets/stylesheets/user.scss (新規作成)
 
 div.wrapper {
@@ -120,9 +145,16 @@ div.wrapper {
   }
 }
 ```
+<br>
+【scss作成前】
+![](images/msg-01.png)
+<br>
+【scss作成後】
+![](images/msg-02.png)
 
+<br>
 ログイン成功メッセージを共通レイアウトに表示させる。
-```
+```html
 # app/views/layouts/application.html.erb
 
 <!DOCTYPE html>
@@ -135,8 +167,9 @@ div.wrapper {
 </head>
 <body>
 
-<!-- 下記を追記 -->
+<!--***************** 下記を追加 ****************-->
 <p class="notice"><%= notice %></p>
+<!--*********************************************-->
 
 <%= yield %>
 
@@ -145,17 +178,47 @@ div.wrapper {
 
 ```
 
+<br>
 ### Deviseメッセージの日本語化
-I18nライブラリをインストールする。
-```
+I18nライブラリをインストールする。<br>
+Gemfileを修正。
+```ruby
 # Gemfile
 
-# 下記を追記
+#--**********************省略********************
+
+gem 'sdoc', '~> 0.4.0', group: :doc
+
+gem 'devise'
+
+gem 'carrierwave'
+
+gem 'twitter-bootstrap-rails'
+
+#--**********************下記を追加**********************
 gem 'i18n'
+#--******************************************************
+
+# Use ActiveModel has_secure_password
+# gem 'bcrypt', '~> 3.1.7'
+
+# Use Unicorn as the app server
+# gem 'unicorn'
+
+#--**********************省略********************
+
 ```
 
-システムのデフォルト言語を日本語にする
+`Gemfile`を修正したら`bundle install`を実行
+
+```bash
+$ bundle install
 ```
+
+
+システムのデフォルト言語を日本語にする。<br>
+`config.i18n.default_locale`はコメントアウトされているため、先頭の`#`は外す。
+```ruby
 # config/application.rb
 
 require File.expand_path('../boot', __FILE__)
@@ -178,7 +241,8 @@ module ElitesMessengerRepo
 
     # The default locale is :en and all translations from config/locales/*.rb,yml are auto loaded.
     # config.i18n.load_path += Dir[Rails.root.join('my', 'locales', '*.{rb,yml}').to_s]
-    # default_localeを:jaに設定する
+
+    # --******************** default_localeを:jaに設定する **********************
     config.i18n.default_locale = :ja
 
     # Do not swallow errors in after_commit/after_rollback callbacks.
@@ -188,31 +252,42 @@ end
 ```
 
 日本語化ファイル(ja.yml)とDevise用の日本語化ファイル(devise.ja.yml)を`config/locales`ディレクトリ下に設置する
-- ja.yml https://github.com/svenfuchs/rails-i18n/blob/master/rails/locale/ja.yml
-- devise.ja.yml https://gist.githubusercontent.com/kawamoto/4729292/raw/80fd53034289be926de2e2206c2ab7afbac35993/devise.ja.yml
+- <a href="https://raw.githubusercontent.com/svenfuchs/rails-i18n/master/rails/locale/ja.yml" target="_blank">ja.yml</a>
+- <a href ="https://gist.githubusercontent.com/kaorumori/7276cec9c2d15940a3d93c6fcfab19f3/raw/a8c4f854988391dd345f04ff100441884c324f2a/devise.ja.yml" target="_blank">devise.ja.yml</a>
+<br>
 
+顧客管理システムで解説した`wget`コマンドを使用してもOK
 
+<br>
 ### 動作確認
-- `localhost:3000`にアクセスし、ログイン画面にリダイレクトすること
+- `https://【workspace名】-【cloud9のUsername】`にアクセスし、ログイン画面にリダイレクトすること
 - メールアドレスとパスワードを入力し、ログイン画面エラーメッセージが表示されること
 
+<br>
+下記が表示されていればOK
+![](images/msg-03.png)
+
+<br>
 ### 補足: サーバの起動
-- サーバの起動は`bundle exec rails s`
+- Cloud9上でサーバを起動する場合は`bundle exec rails s -b $IP -p $PORT`
 - ソースファイルを変更したら必ずサーバを再起動すること
 
+<br>
 ### 補足: SCSS
 - SCSSはCSSを記入しやすく&読みやすくしたCSSのメタ言語
 - CSSと比べて、子要素に対するセレクタを入れ子で表現できる、変数を使用できるなどのメリットがある
 
+<br>
 ### 補足: Deviseのauthenticatable
 - 認証に使用するメソッド名は「authenticate_」+「Deviseに使用するクラス名」になる。
 「User」であれば`authenticate_user`、「Admin」であれば`authenticate_admin`。
 
+<br>
 ### 補足: I18n
 - `config/locales`に配置したja.ymlファイルは`I18n.t`で参照する。
 - `I18n.t`には`%{}`で囲ってパラメータを渡すことが可能。
 
-```
+```yml
 # config/locales/ja.yml
 
 ja:
