--- a/resume/05_実習_ユーザ新規作成画面.md
+++ b/resume/05_実習_ユーザ新規作成画面.md
@@ -2,8 +2,9 @@
 
 ### ユーザ新規作成画面の作成
 
-ユーザ新規作成画面のデザインを変更する。
-```
+ユーザ新規作成画面のデザインを変更します。<br>
+主にBootstrapのclassを適用しています。
+```html
 # app/views/devise/registrations/new.html.erb
 
 <div class="wrapper sign_up">
@@ -58,7 +59,8 @@
 </div>
 ```
 
-```
+エラーメッセージのフォントカラーを変更します。
+```css
 # app/assets/stylesheets/user.scss
 
 div.wrapper {
@@ -75,18 +77,25 @@ div.wrapper {
   }
 }
 
+/* ***************** 下記を追加 ************** */
 #error_explanation {
   color: red;
 }
+/* ******************************************** */
 ```
+<br>
+`https://【workspace名】-【cloud9のUsername】/users/sign_up`にアクセスし、全て未入力の状態で`Sign up`を押すとエラーが発生します。<br>
+エラーメッセージが赤で表示されていればOKです。
 
+<br>
 ### Userモデルにバリデーションを設定
 
-Userモデルのnameとagreementに以下のバリデーションを設定する
+Userモデルのnameとagreementに以下のバリデーションを設定します。
 - name(ユーザ名)の入力は必須
 - agreement(同意チェック)の入力は必須 & true(チェックON)であること
+- acceptにはチェック時の値が指定される({accept: true}はチェックした時は`true`とするという意味)
 
-```
+```ruby
 # app/models/user.rb
 
 class User < ActiveRecord::Base
@@ -98,18 +107,22 @@ class User < ActiveRecord::Base
   # サムネイル画像にCarrierWaveで作成したUserThumbnailUploaderを使用
   mount_uploader :thumbnail, UserThumbnailUploader
 
+# --************************* 下記を追加 *************************
   # バリデーションを設定
   validates :name, presence: true
   validates :agreement, presence: true, acceptance: {accept: true}
+# --**************************************************************
 end
 ```
 
+<br>
 ### 動作確認
-- `localhost:3000/users/sign_up`にアクセスし、ユーザ新規作成画面が表示されること。
+- `https://【workspace名】-【cloud9のUsername】//users/sign_up`にアクセスし、ユーザ新規作成画面が表示されること。
 - 不正なバリデーションの入力でエラーメッセージが表示されること。
 - バリデーションエラーが無い場合、ユーザが作成できること。
 - ログイン画面で作成したユーザ情報でログインできること。
 
+<br>
 ### 補足: バリデーションの種類
 使用頻度の高いバリデーション一覧
 
