--- a/resume/06_実習_ログアウト.md
+++ b/resume/06_実習_ログアウト.md
@@ -1,7 +1,7 @@
 ## ログアウトボタンの追加
 
-共通レイアウトにログアウトのリンクを設置する
-```
+共通レイアウトにログアウトのリンクを設置します。
+```html
 # app/views/layouts/application.html.erb
 
 <!DOCTYPE html>
@@ -14,12 +14,13 @@
 </head>
 <body>
 
-<!-- 以下を追記 -->
+<!--****************************** 下記を追加 ****************************-->
 <% if user_signed_in? %>
   <div class="logout_wrapper">
     <%= link_to "Log out", destroy_user_session_path, method: :delete %>
   </div>
 <% end %>
+<!--**********************************************************************-->
 
 <p class="notice"><%= notice %></p>
 
@@ -30,17 +31,24 @@
 
 ```
 
-```
+```css
 # app/assets/stylesheets/timeline.scss
 
+/* ***************** 下記を追加 ************** */
 div.logout_wrapper {
   text-align: right;
 }
+/* ******************************************** */
 ```
+<br>
+ログイン後、下記のように表示されていればOKです。
+![](images/msg-06.png)
 
+<br>
 ### 動作確認
-- ログイン後のタイムライン画面でログアウトのリンクからログアウトできること。
+ログイン後のタイムライン画面で「Log out」のリンクからログアウトできること。
 
+<br>
 ### 補足: Deviseのヘルパーメソッド
 Deviseが自動作成するメソッド一覧(使用頻度の高いもの抜粋)
 
