--- a/resume/07_実習_パスワードリマインダー画面.md
+++ b/resume/07_実習_パスワードリマインダー画面.md
@@ -1,8 +1,8 @@
 ## パスワードリマインダー画面の作成
 
-パスワードリマインダー画面のデザインを変更する。
-
-```
+パスワードリマインダー画面のデザインを変更します。<br>
+主にBootstrapのclassを適用しています。
+```html
 # app/views/devise/passwords/new.html.erb
 
 <div class="wrapper">
@@ -10,16 +10,16 @@
   <h2>パスワードリマインダー</h2>
 
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: {method: :post}) do |f| %>
-      <%= devise_error_messages! %>
+    <%= devise_error_messages! %>
 
-      <div class="form-group">
-        <%= f.label :email %><br/>
-        <%= f.email_field :email, autofocus: true %>
-      </div>
+    <div class="form-group">
+      <%= f.label :email %><br/>
+      <%= f.email_field :email, autofocus: true %>
+    </div>
 
-      <div class="actions">
-        <%= f.submit "Send", class: 'btn btn-primary' %>
-      </div>
+    <div class="actions">
+      <%= f.submit "Send", class: 'btn btn-primary' %>
+    </div>
   <% end %>
 
   <div class="links">
@@ -28,9 +28,16 @@
 </div>
 ```
 
-パスワード再設定画面のデザインを変更する。
+<br>
+デザイン変更後のパスワードリマインダー画面<br>
+ログイン後に下記にアクセスして、表示内容を確認します。<br>
+`https://【workspace名】-【cloud9のUsername】/users/password/edit`
+![](images/msg-07.png)
 
-```
+<br>
+パスワード再設定画面のデザインを変更します。<br>
+主にBootstrapのclassを適用しています。
+```html
 # app/views/devise/passwords/edit.html.erb
 
 <div class="wrapper">
@@ -64,8 +71,13 @@
   </div>
 </div>
 ```
+<br>
+デザイン変更後のパスワードリマインダー画面
+![](images/msg-07.png)
 
+<br>
 ### 動作確認
-- `localhost:3000/users/password/new`からリマインダー画面を表示できること。
-- リマインダー画面のメールアドレス送信でメールが受信できること。
-- メールのリンクからパスワード再設定画面が表示でき、パスワードの再設定ができること。
+`https://【workspace名】-【cloud9のUsername】/users/password/new`からリマインダー画面を表示できること。<br>
+ログインしている場合はログアウトしてから上記のURLにアクセスすること。<br>
+リマインダー画面のメールアドレス送信でメールが受信できること。<br>
+メールのリンクからパスワード再設定画面が表示でき、パスワードの再設定ができること。
