--- a/resume/11_実習_投稿ユーザのフィルタリング.md
+++ b/resume/11_実習_投稿ユーザのフィルタリング.md
@@ -1,8 +1,11 @@
 ## 投稿ユーザのフィルタリング
 
-Timelineモデルに`user_id`でフィルタリングする`user_filter`スコープを追加する。
+Timelineモデルに`user_id`でフィルタリングする`user_filter`スコープを追加します。<br>
+引数として`user_id`が渡されます。<br>
+`user_id`が設定されている時は、`where(user_id: user_id)`を返します。<br>
 
-```
+
+```ruby
 # app/models/timeline.rb
 
 class Timeline < ActiveRecord::Base
@@ -10,18 +13,22 @@ class Timeline < ActiveRecord::Base
 
   validates :message, presence: true, allow_blank: false
 
+#--********************** 下記を追加 ************************
   scope :user_filter, -> user_id do
     # user_idパラメータがあればフィルターをかける
     where(user_id: user_id) if user_id.present?
   end
+#--**********************************************************
 end
 ```
 
-Timelineコントローラを編集する。
-- タイムライン取得時に`user_filter`スコープでフィルタリング
+<br>
+Timelineコントローラを編集します。
+- タイムライン取得時(`index`アクション)に`user_filter`スコープでフィルタリング
+- タイムライン取得時(`index`アクション)に`User`の一覧を取得
 - ユーザをフィルタリングする`filter_by_user`アクションの実装
 
-```
+```ruby
 # app/controllers/timelines_controller.rb
 
 class TimelinesController < ApplicationController
@@ -29,9 +36,15 @@ class TimelinesController < ApplicationController
     # メッセージ入力
     @input_message = params[:id] ? Timeline.find(params[:id]) : Timeline.new
     # タイムラインを取得
+#--*********************** 修正前 ***********************
+    @timeline = Timeline.includes(:user).order('updated_at DESC')
+#--*********************** 修正後 ***********************
     @timeline = Timeline.includes(:user).user_filter(params[:filter_user_id]).order('updated_at DESC')
+
+#--******************** 下記を追加 **********************
     # ユーザ一覧を取得
     @users = User.all
+#--******************************************************
   end
 
   def create
@@ -57,6 +70,7 @@ class TimelinesController < ApplicationController
     redirect_to action: :index
   end
 
+#--************************ 下記を追加 *********************
   def filter_by_user
     if params[:filter_user_id].present?
       redirect_to action: :index, filter_user_id: params[:filter_user_id]
@@ -65,6 +79,7 @@ class TimelinesController < ApplicationController
       redirect_to action: :index
     end
   end
+#--*********************************************************
 
   private
   def input_message_param
@@ -75,21 +90,41 @@ end
 
 ```
 
-`filter_by_user`アクションのルーティングを追加する。
+<br>
+`filter_by_user`アクションのルーティングを追加します。<br>
+`collection`ブロックを使用すると、アクションを追加することが可能です。<br>
+`collection`ブロックには全てのデータを対象としたアクションを記述します。<br>
+同じような動きをする`member`ブロックも存在するが、`member`ブロックは特定のデータを対象としたアクションを記述し、記述したアクションに対してはリクエストでIDパラメータを指定する必要があります。
 
-```
+```ruby
 # config/routes.rb
 
+#--*********************** 修正前 *********************
+resources :timelines
+#--*********************** 修正後 *********************
 resources :timelines do
   collection do
     post 'filter_by_user'
   end
 end
-```
+#---**************************************************
 
-タイムライン画面にユーザフィルタリングのドロップダウンと反映ボタンを追加する。
+#-**** 省略 ****
 
 ```
+上記追加後にルーティングを確認します。
+```bash
+$ rake routes
+```
+`filter_by_user_timelines`が追加されていれば良いです。
+![](images/msg-11.png)
+
+<br>
+タイムライン画面にユーザフィルタリングのドロップダウンと反映ボタンを追加します。<br>
+`select_tag`：選択ボックスの生成<br>
+`options_for_select`：配列・ハッシュから選択肢を生成<br>
+
+```html
 # app/views/timelines/index.html.erb
 
 <div class="wrapper timeline_wrapper">
@@ -121,17 +156,19 @@ end
     <% end %>
   </div>
 
+<!--************************* 下記を追加 ************************-->
   <div class="user_filter">
     <%= form_tag filter_by_user_timelines_path do |f| %>
-        <div class="form-group">
-          <label>ユーザフィルター</label><br/>
-          <%= select_tag :filter_user_id, options_for_select(@users.map { |m| [m.name, m.id] }, params[:filter_user_id]), prompt: 'フィルターなし', class: 'form-control' %>
-        </div>
-        <div class="actions">
-          <%= submit_tag 'Apply', class: 'btn btn-primary' %>
-        </div>
+      <div class="form-group">
+        <label>ユーザフィルター</label><br/>
+        <%= select_tag :filter_user_id, options_for_select(@users.map { |m| [m.name, m.id] }, params[:filter_user_id]), prompt: 'フィルターなし', class: 'form-control' %>
+      </div>
+      <div class="actions">
+        <%= submit_tag 'Apply', class: 'btn btn-primary' %>
+      </div>
     <% end %>
   </div>
+<!--***********************************************************-->
 
   <!-- タイムライン -->
   <div class="timeline">
@@ -156,8 +193,30 @@ end
 
 </div>
 ```
+<br>
+`map`：要素の数だけ繰り返しブロックを実行し、ブロックの戻り値を集めた配列を作成して返す<br>
+**(例)**<br>
+`User`モデルに紐づく`users`テーブルが下記の内容で存在する場合<br>
+配列の中に[name, id]の配列が生成されます
 
+| id         | name        |
+|:-----------|:------------|
+| 1          | 蓮          |
+| 2          | 大翔        |
+| 3          | 陽菜        |
+| 4          | 結菜        |
+| 5          | 悠真        |
+
+```bash
+$ rails c
+2.3.0 :001 > @users = User.all
+2.3.0 :002 > @users.map { |m| [m.name, m.id] } 
+ => [["蓮", 1], ["大翔", 2], ["陽菜", 3], ["結菜", 4], ["悠真", 5]] 
 ```
+
+<br>
+ユーザフィルタリング関連のデザインを変更
+```css
 # app/assets/stylesheets/timelines.scss
 
 div.logout_wrapper {
@@ -194,6 +253,7 @@ div.timeline_wrapper {
       p.icon {
         display: inline-block;
         width: 70px;
+        vertical-align: top;
         img {
           max-width: 100%;
           height: auto;
@@ -208,18 +268,23 @@ div.timeline_wrapper {
     }
   }
 
+/* ***************** 下記を追加 ************** */
   div.user_filter {
     margin-bottom: 20px;
     div.actions {
       text-align: right;
     }
   }
+/* ******************************************** */
 }
 ```
 
+<br>
 ### 動作確認
 - ドロップダウンでユーザを選択して投稿一覧がフィルタリングされること。
 
+![](images/msg-12.png)
+<br>
 ### 補足: selectまたはselect_tagの設定方法
 配列で設定
 ```
