--- a/resume/13_実習_メッセージの削除.md
+++ b/resume/13_実習_メッセージの削除.md
@@ -1,8 +1,8 @@
 ## メッセージの削除
 
-Timelineコントローラに`destroy`アクションでメッセージ削除処理を追加する。
+Timelineコントローラに`destroy`アクションでメッセージ削除処理を追加します。
 
-```
+```ruby
 # app/controllers/timelines_controller.rb
 
 class TimelinesController < ApplicationController
@@ -44,11 +44,13 @@ class TimelinesController < ApplicationController
     redirect_to action: :index
   end
 
+#--********************** 下記を追加 *************************
   def destroy
     timeline = Timeline.find(params[:id])
     timeline.destroy
     redirect_to action: :index
   end
+#--**********************************************************
 
   def filter_by_user
     if params[:filter_user_id].present?
@@ -68,15 +70,18 @@ end
 
 ```
 
-Timelineモデルのアソシエーションを編集する。
+Timelineモデルのアソシエーションを編集します。
 - reply_idのアソシエーションに`dependent: :destory`を設定し、投稿削除時に関連する返信も削除するようにする
 
-```
+```ruby
 # app/models/timeline.rb
 
 class Timeline < ActiveRecord::Base
   belongs_to :user
+  
+#--******** , dependent: :destroy を追加 ****************
   has_many :replies, class_name: 'Timeline', foreign_key: 'reply_id', dependent: :destroy
+#--******************************************************
 
   validates :message, presence: true, allow_blank: false
 
@@ -93,7 +98,7 @@ end
 ```
 
 自分の投稿内容の場合は削除ボタンを表示する
-```
+```html
 # app/views/timelines/_timeline.html.erb
 
 <%
@@ -103,31 +108,36 @@ end
 <div class="per <%= 'mine' if mypost?(t) %> <%= 'reply' if is_reply %>">
   <p class="icon">
     <% if t.user.thumbnail? %>
-        <%= image_tag t.user.thumbnail.url %>
+      <%= image_tag t.user.thumbnail.url %>
     <% else %>
-        NO IMAGE
+      NO IMAGE
     <% end %>
   </p>
   <%= simple_format t.message, class: 'message' %>
   <% if mypost?(t) %>
-      <div class="operation">
-        <%= link_to root_path(id: t.id, message: t.message) do %>
-            <%= button_tag 'Edit', class: 'btn btn-info' %>
-        <% end %>
-        <%= button_to 'Del', timeline_path(t), method: :delete, class: 'btn btn-danger', data: {confirm: '削除してよろしいですか？'}  %>
-      </div>
-  <% else %>
-      <%= link_to root_path(reply_id: t.id) do %>
-          <%= button_tag 'Re', class: 'btn btn-info' %>
+<!--************************** 下記を追加 ************************-->
+    <div class="operation">
+<!--*************************************************************-->
+      <%= link_to root_path(id: t.id, message: t.message) do %>
+        <%= button_tag 'Edit', class: 'btn btn-info' %>
       <% end %>
+      
+<!--************************** 下記を追加 ************************-->
+      <%= button_to 'Del', timeline_path(t), method: :delete, class: 'btn btn-danger', data: {confirm: '削除してよろしいですか？'}  %>
+    </div>
+<!--*************************************************************-->
+  <% else %>
+    <%= link_to root_path(reply_id: t.id) do %>
+      <%= button_tag 'Re', class: 'btn btn-info' %>
+    <% end %>
   <% end %>
 </div>
 <% t.replies.each do |r| %>
-    <%= render 'timelines/timeline', t: r, is_reply: true %>
+  <%= render 'timelines/timeline', t: r, is_reply: true %>
 <% end %>
 ```
 
-```
+```css
 # app/assets/stylesheets.timelines.scss
 
 div.logout_wrapper {
@@ -180,6 +190,7 @@ div.timeline_wrapper {
         width: 500px;
         vertical-align: top;
       }
+/* ***************** 下記を追加 ************** */
       div.operation {
         display: inline-block;
         button {
@@ -191,6 +202,7 @@ div.timeline_wrapper {
           }
         }
       }
+/* ******************************************** */
     }
   }
 
@@ -204,11 +216,11 @@ div.timeline_wrapper {
 ```
 
 ### 動作確認
-- 削除ボタンで自分の投稿及び返信が削除されること。
+- 削除ボタンで自分の投稿及び返信が削除されることを確認。
 
 ### 補足: アソシエーションのdependentオプション
 
-dependentオプションはモデルを削除する場合のアソシエーションに対する動作を設定する。
+dependentオプションはモデルを削除する場合のアソシエーションに対する動作を設定します。
 
 オプション名 | 概要
 -- | --
