I18n ライブラリはもともと rails が依存しており、インストール不要
よって gem のインストール周りの記述を削除した。
see also http://railsguides.jp/i18n.html

--- a/resume/04_実習_ログイン画面.md
+++ b/resume/04_実習_ログイン画面.md
@@ -180,42 +180,7 @@ div.wrapper {
 
 <br>
 ### Deviseメッセージの日本語化
-I18nライブラリをインストールする。<br>
-Gemfileを修正。
-```ruby
-# Gemfile
-
-#--**********************省略********************
-
-gem 'sdoc', '~> 0.4.0', group: :doc
-
-gem 'devise'
-
-gem 'carrierwave'
-
-gem 'twitter-bootstrap-rails'
-
-#--**********************下記を追加**********************
-gem 'i18n'
-#--******************************************************
-
-# Use ActiveModel has_secure_password
-# gem 'bcrypt', '~> 3.1.7'
-
-# Use Unicorn as the app server
-# gem 'unicorn'
-
-#--**********************省略********************
-
-```
-
-`Gemfile`を修正したら`bundle install`を実行
-
-```bash
-$ bundle install
-```
-
-
+I18nモジュールを設定する。<br>
 システムのデフォルト言語を日本語にする。<br>
 `config.i18n.default_locale`はコメントアウトされているため、先頭の`#`は外す。
 ```ruby
